--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/mock/feedsMock.json
+    - assets/images/feedComment.png
+    - assets/images/feedPraise.png
+    - assets/images/qdaily.png
+    - assets/images/yellowDot.png
+    - assets/images/toolbarShare.png
+    - assets/images/detailAdd.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
